# app/routes/post.routes.js
@@ -6,14 +6,14 @@ const moderatorMiddleware = require("../middleware/communityModerator.middleware
 const imageUploadMiddleware = require("../middleware/imageUpload.middleware");
 
 router.post("/", authMiddleware, postController.create);
-router.get("/community/:communityId", postController.readAll);
 router.get("/:postId", postController.readOne);
+router.put("/:postId", authMiddleware, moderatorMiddleware, postController.update);
+router.delete("/:postId", authMiddleware, moderatorMiddleware, postController.delete);
+router.post("/:postId/file", authMiddleware, imageUploadMiddleware, postController.upload);
+router.delete("/:postId/file", authMiddleware, moderatorMiddleware, postController.deleteFile);
 router.get("/:postId/files", postController.readFiles);
 router.post("/:postId/like", authMiddleware, postController.like);
 router.post("/:postId/report", authMiddleware, postController.report);
-router.post("/:postId/file", authMiddleware, imageUploadMiddleware, postController.upload);
-router.put("/:postId", authMiddleware, moderatorMiddleware, postController.update);
-router.delete("/:postId", authMiddleware, moderatorMiddleware, postController.delete);
-router.delete("/:postId/file", authMiddleware, moderatorMiddleware, postController.deleteFile);
+router.get("/community/:communityId", postController.readAll);
 
 module.exports = router;
